Bug 155187 - Newly inserted / deleted tables are not coloured when tracking changes.
Summary: Newly inserted / deleted tables are not coloured when tracking changes.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-05-08 13:05 UTC by NISZ LibreOffice Team
Modified: 2023-06-23 07:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (13.50 KB, application/vnd.oasis.opendocument.text)
2023-05-08 13:06 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-08 13:05:47 UTC
Description:
A newly inserted or deleted table is not coloured blue/pink when change tracking is active.

Steps to Reproduce:
1: Open the attached document.
2: Add or delete a table.


Actual Results:
No change will be coloured.

Expected Results:
The change will be coloured when adding or deleting.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 002ae41bb6088002ba3ed0188ac822fb823a23f9
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-05-08 13:06:02 UTC
Created attachment 187138 [details]
Sample file
Comment 2 Commit Notification 2023-06-13 15:34:34 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c1fee94e007a4c985572ec708bb60afa60f565d

tdf#155187 sw track changes: color tables in single changes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-14 12:22:49 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/49c4eec4f7974b21cd3c802892ff00b9e834cdd1

tdf#155187 sw track changes: color tables in single changes

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2023-06-23 07:50:26 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 986c2d86a7b53a6599d014db7327f47cb33d4fea
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded