tdf#155187 sw track changes: color tables in single changes

In Show Changes mode, whole tables within a single redline,
i.e. in a single text change get similar coloring, as in
separately tracked table rows or columns.

Follow-up to commit 48898a72066ff9982feafebb26708c4e779fd460
"tdf#60382 sw xmloff: import/export tracked table/row deletion"
and commit f348440e17debacbcba9153e238e010e8c020bdc
"tdf#146120 sw: show tracked table changes with different color".

Change-Id: I0154a20146cd6689750fa33edfe960eb22d7610a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152959
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>